fix: align tv gemist cta chevron with button text

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,11 @@
     @apply block w-6 h-6;
 }
 
+/* Small chevron icon in inline CTA buttons */
+.cta-chevron-icon > svg {
+    @apply block w-4 h-4;
+}
+
 /* Prose component styles */
 .zw-prose p:first-child {
     @apply font-bold;
